tests/fail/fail_arg_count_mismatch.kr
fn soma(nter a, nter b) nter {
    divolvi a + b;
}

fn inisiu() {
    soma(1, 2, 3);
}
